# Boid-simulation

./: .gitignore  README.md
boid_description/: CMakeLists.txt  package.xml
boid_description/launch/: boid_display.launch
boid_description/meshes/: bird.dae  bird.stl
boid_description/urdf/: bird.gazebo.xacro  bird.urdf.xacro  materials.xacro
boid_gazebo/: CMakeLists.txt  package.xml
boid_gazebo/include/boid_gazebo/: boid.h
boid_gazebo/launch/: flocking.launch  spawn_boid.launch  swarm_in_gazebo.launch
boid_gazebo/launch/includes/: boid_models.launch
boid_gazebo/src/: boid.cpp
boid_gazebo/worlds/: outdoor.world
